--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^5.1.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mysql2": "^1.5.3",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0"
   }
