created user.js for db and added packages to encrypt pw

--- a/package.json
+++ b/package.json
@@ -19,18 +19,24 @@
   },
   "homepage": "https://github.com/Faze18/ProjectX#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "chai": "^4.1.2",
     "choices.js": "^3.0.4",
     "css-loader": "^1.0.0",
     "eslint": "^5.1.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "handlebars-loader": "^1.7.0",
+    "mocha": "^5.2.0",
     "mysql2": "^1.5.3",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "npm": "^6.2.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sass-loader": "^7.0.3",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0",
