--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "homepage": "https://github.com/Faze18/ProjectX#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "choices.js": "^3.0.4",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^1.0.0",
+    "ejs": "^2.6.1",
     "eslint": "^5.1.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -31,6 +35,8 @@
     "file-loader": "^1.1.11",
     "handlebars-loader": "^1.7.0",
     "mocha": "^5.2.0",
+    "morgan": "^1.9.0",
+    "mysql": "^2.16.0",
     "mysql2": "^1.5.3",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
