--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "choices.js": "^3.0.4",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^6.0.0",
     "eslint": "^5.1.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -35,6 +36,7 @@
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.5.3",
+    "node-fetch": "^2.2.0",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "npm": "^6.2.0",
